fixed form again

--- a/index.html
+++ b/index.html
@@ -722,6 +722,10 @@
                         </div>
                     </div>
 
+                    <input type="hidden" name="_subject" value="Contact Information Received from RB Website!" />
+                    <input type="hidden" name="_cc" value="pthompson@restfulbrilliance.com" />
+                    <input type="text" name="_gotcha" style="display:none" />
+
                     <div class="row">
                         <div class="small-12 columns">
                             <button type="submit" name="formSubmit" id="formSubmit" class="button float-right"><span class="icon-send iconLeft"></span>Submit Form</button>
@@ -776,7 +780,7 @@
 <script src="/js/plugins.min.js"></script>
 <script src="/js/parallaxify.min.js"></script>
 <script src="/js/app.min.js"></script>
-<script src="/js/ajax-form.min.js"></script>
+<script src="/js/ajax-for.min.js"></script>
 <script>new Parallaxify().registerUpdate()</script>
 <script>
     var header = document.querySelector('#autoHide');
