changed highlight color on homepage

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="row paddingTop" id="difference" data-magellan-target="difference">
         <div class="small-12 columns">
             <h3 class="title">The &lt;RB&gt; Difference</h3>
-            <p class="lead">After working in Web for almost <span class="highlighted">15 years</span> we decided to go our own way and do things different.  In a nutshell, we believe the most important considerations for our clients are: honesty, transparency, and quality.</p>
+            <p class="lead">After working in Web for almost <span class="highlightedColor">15 years</span> we decided to go our own way and do things different.  In a nutshell, we believe the most important considerations for our clients are: honesty, transparency, and quality.</p>
         </div>
     </div>
 
@@ -166,7 +166,7 @@
     <div class="row paddingTop" id="services" data-magellan-target="services">
         <div class="small-12 columns">
             <h3 class="title">Our Services</h3>
-            <p class="lead">We can tackle almost any problem.  Whether it's building an API to allow different systems to communicate, or a full-blown eCommerce implementation.  We're extremely confident that you'll be <span class="highlighted">200 OK</span> working with us.</p>
+            <p class="lead">We can tackle almost any problem.  Whether it's building an API to allow different systems to communicate, or a full-blown eCommerce implementation.  We're extremely confident that you'll be <span class="highlightedColor">200 OK</span> working with us.</p>
         </div>
     </div>
 
