--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                     </div>
                     <div class="small-12 medium-6 columns">
                         <label>
-                            <input name="email" type="email" placeholder="Your valid e-maiil">
+                            <input name="email" type="email" placeholder="Your valid e-mail">
                         </label>
                     </div>
                 </div>
