added CNAME and fixed small type in contact form.

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@ layout: default
                     </div>
                     <div class="small-12 medium-6 columns">
                         <label>
-                            <input name="email" type="email" placeholder="Your valid e-maiil">
+                            <input name="email" type="email" placeholder="Your valid e-mail">
                         </label>
                     </div>
                 </div>
