--- a/sram/tests/b2c-test.html
+++ b/sram/tests/b2c-test.html
@@ -36,7 +36,7 @@
 <body>
     <div class="banner"></div>
     <div class="iframe-wrapper">
-        <iframe src="http://sram.local/b2c-product-listing" scrolling="no"></iframe>
+        <iframe src="http://sramconnect-stage.sram.com/zipp-b2c-product-listing/" scrolling="no"></iframe>
     </div>
     <div class="footer"></div>
     <script>
