updated sram test page AGAIN

--- a/sram/tests/b2c-test.html
+++ b/sram/tests/b2c-test.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>B2C Test (Parent: rb website, Child: sramconnect-stage)</title>
-    <script src="/Scripts/jquery-2.2.4.js"></script>
-    <script src="/Scripts/iframeresizer/parent/iframeResizer.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/iframeResizer.min.js"></script>
     <style>
         * {
             margin: 0;
