updated life fitness test page, deleted old ones

--- a/lifefitness/tests/life-fitness-buy-button-test-v3-du.html
+++ b/lifefitness/tests/life-fitness-buy-button-test-v3-du.html
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <td>SKU ID:</td>
-                <td><pre>PH-PCFEE-IWXXD-0101C</pre></td>
+                <td><pre>C1-XX03-0104_GC-000X-0105</pre></td>
             </tr>
             <tr>
                 <td>Button Color:</td>
@@ -31,7 +31,7 @@
             </tr>
             <tr>
                 <td>Product Name:</td>
-                <td><pre>Platinum Club Series Flexstrider variabele paslengte met Discover SE Console in Artic Silver</pre></td>
+                <td><pre>C1 Lifecycle upright bike met Go Console</pre></td>
             </tr>
             <tr>
                 <td>Product Name Color:</td>
@@ -40,7 +40,7 @@
         </table>
 
         <!-- begin shopify buy button code-->
-        <div id='product-component-PH-PCFEE-IWXXD-0101C'></div>
+        <div id='product-component-C1-XX03-0104_GC-000X-0105'></div>
         <script type="text/javascript">
             /*<![CDATA[*/
 
@@ -73,8 +73,8 @@
 
                     ShopifyBuy.UI.onReady(client).then(function (ui) {
                         ui.createComponent('product', {
-                            handle: ['PH-PCFEE-IWXXD-0101C'],
-                            node: document.getElementById('product-component-PH-PCFEE-IWXXD-0101C'),
+                            handle: ['C1-XX03-0104_GC-000X-0105'],
+                            node: document.getElementById('product-component-C1-XX03-0104_GC-000X-0105'),
                             moneyFormat: '%E2%82%AC%7B%7Bamount%7D%7D',
                             options: {
                                 "product": {
