removed old test pages, updated address.

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ layout: default
 
             <div class="small-12 columns">
                 <h5 class="featureBoxTitle">Address</h5>
-                <p>67 Greene St. #A<br />Burlington, VT<br />USA</p>
+                <p>215 High St.<br />Saint Albans City, VT<br />USA</p>
             </div>
         </div>
     </div>
