Updated Episerver Branding

--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
             <div class="small-12 large-4 columns">
                 <div class="testimonial-1">
                     <div class="testimonImg rbBorder boxShadow">
-                        <img src="img/tech/epi.png" alt="EPiServer">
+                        <img src="img/tech/epi.png" alt="Episerver">
                     </div>
                     <div class="testimonMeta">
-                        EPiServer CMS &amp; Commerce
+                        Episerver CMS &amp; Commerce
                         <span>Enterprise Class CMS and eCommerce</span>
                     </div>
                     <div>
-                        <p>EPiServer is one of the best .NET-based CMS platforms in existence.  Built on top of .NET, and embracing .NET best practices and methodologies, it provides an extremely stable and robust foundation that can be used for the most demanding applications.</p>
+                        <p>Episerver is one of the best .NET-based CMS platforms in existence.  Built on top of .NET, and embracing .NET best practices and methodologies, it provides an extremely stable and robust foundation that can be used for the most demanding applications.</p>
                     </div>
                 </div>
             </div>
