--- a/test/lifefitness/buy-button.html
+++ b/test/lifefitness/buy-button.html
@@ -32,23 +32,89 @@ sitemap: false
 <body>
   <div class="row column">
     <h1 class="text-center">Buy Button Demonstration Page</h1>
+      <p>The Shopify Buy Button integration uses iframes to render an add to cart button (and associated information) and another iframe to render the fly out cart.  This integration uses only HTML and Javascript.</p>
   </div>
+
   <div class="row">
     <div class="medium-6 columns">
-      <h3>Shopify Buy Button Integration</h3>
-      <p>The Shopify Buy Button integration uses iframes to render an add to cart button (and associated information) and another iframe to render the fly out cart.  This integration uses only HTML and Javascript.</p>
+      <h3>English Buy Button</h3>
       <h4>Specifications:</h4>
       <ul>
         <li>Mininum Width: 240px</li>
-        <li>Minimum Height: 165px</li>
+        <li>Minimum Height: 167px</li>
       </ul>
-      <p>We also recommend padding around the div that contains the iframe itself</p>
+      <p><em>We also recommend padding around the div that contains the iframe itself</em></p>
     </div>
     <div class="medium-6 columns">
-      <div id='product-component-93ffcfac9ff'></div>
-      <script type="text/javascript" src="/js/test/lifefitness/buy-button-1.js"></script>
+      <div id='product-component-en'></div>
+      <script type="text/javascript" src="/js/test/lifefitness/buy-button-en.js"></script>
     </div>
   </div>
+
+  <div class="row">
+    <div class="medium-6 columns">
+      <h3>Benelux [Dutch] Buy Button</h3>
+      <h4>Specifications:</h4>
+      <ul>
+        <li>Mininum Width: 240px</li>
+        <li>Minimum Height: 167px</li>
+      </ul>
+      <p><em>We also recommend padding around the div that contains the iframe itself</em></p>
+    </div>
+    <div class="medium-6 columns">
+      <div id='product-component-be_nl'></div>
+      <script type="text/javascript" src="/js/test/lifefitness/buy-button-be_nl.js"></script>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="medium-6 columns">
+      <h3>Benelux [French] Buy Button</h3>
+      <h4>Specifications:</h4>
+      <ul>
+        <li>Mininum Width: 240px</li>
+        <li>Minimum Height: 184px</li>
+      </ul>
+      <p><em>We also recommend padding around the div that contains the iframe itself</em></p>
+    </div>
+    <div class="medium-6 columns">
+      <div id='product-component-be_fr'></div>
+      <script type="text/javascript" src="/js/test/lifefitness/buy-button-be_fr.js"></script>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="medium-6 columns">
+      <h3>German Buy Button</h3>
+      <h4>Specifications:</h4>
+      <ul>
+        <li>Mininum Width: 240px</li>
+        <li>Minimum Height: 184px</li>
+      </ul>
+      <p><em>We also recommend padding around the div that contains the iframe itself</em></p>
+    </div>
+    <div class="medium-6 columns">
+      <div id='product-component-de'></div>
+      <script type="text/javascript" src="/js/test/lifefitness/buy-button-de.js"></script>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="medium-6 columns">
+      <h3>Spanish Buy Button</h3>
+      <h4>Specifications:</h4>
+      <ul>
+        <li>Mininum Width: 240px</li>
+        <li>Minimum Height: 184px</li>
+      </ul>
+      <p><em>We also recommend padding around the div that contains the iframe itself</em></p>
+    </div>
+    <div class="medium-6 columns">
+      <div id='product-component-es'></div>
+      <script type="text/javascript" src="/js/test/lifefitness/buy-button-es.js"></script>
+    </div>
+  </div>
+
 </body>
 
 </html>
