--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
             <div class="small-12 columns">
                 <h5 class="featureBoxTitle">Address</h5>
-                <p>215 High St.<br />Saint Albans City, VT<br />USA</p>
+                <p>305 4th Ave W<br />Kalispell, MT<br />USA</p>
             </div>
         </div>
     </div>
@@ -363,3 +363,4 @@
 </script>
 </body>
 </html>
+
